--- a/PaymentContext/PaymentContext/PaymentContext.Domain/PaymentContext.Domain.csproj
+++ b/PaymentContext/PaymentContext/PaymentContext.Domain/PaymentContext.Domain.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flunt" Version="1.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PaymentContext.Shared\PaymentContext.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
